# studyhelper

./: .claudeignore  .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  debugger.md  test-runner.md
.claude/commands/: check-server.md  commit.md  deploy.md  session-end.md  session-start.md  task.md  test.md
.claude/rules/: fastapi.md  git.md  python.md  testing.md  typescript.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/src/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  metrics.py  scheduler.py
backend/tests/: __init__.py  conftest.py  test_attendance.py  test_auth.py  test_classmates.py  test_files.py  test_health.py  test_lk.py  test_lk_parser.py  test_logging_config.py  test_metrics.py  test_notes.py  test_parser.py  test_request_id_middleware.py  test_retry.py  test_schedule.py  test_schedule_sync.py  test_scheduler.py  test_semesters.py  test_subjects.py  test_teachers.py  test_university.py  test_uploads.py  (+1 more)
docs/: API.md  CURRENT_TASK.md  DECISIONS.md  PROJECT_STATUS.md  StudyHelper_TZ.md  database_schema.md  deployment.md  Описание_предмета.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
nginx/: Dockerfile  nginx.conf
scripts/: backup.sh  init-letsencrypt.sh  restore.sh
(+249 files in other folders)
